update template settings and remove krazo

--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pro.ivanov</groupId>
-    <artifactId>jakarta-mvc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>jakarta-mvc-template</artifactId>
+    <version>1.0.0</version>
     <packaging>war</packaging>
-
-    <name>jakarta-mvc</name>
 
     <properties>
         <jakartaee-api.version>10.0.0</jakartaee-api.version>
-        <krazo.version>3.0.1</krazo.version>
         <jakarta.mvc-api.version>2.1.0</jakarta.mvc-api.version>
-        <junit.version>5.9.0</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -26,38 +23,15 @@
             <version>${jakartaee-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>jakarta.mvc</groupId>
             <artifactId>jakarta.mvc-api</artifactId>
             <version>${jakarta.mvc-api.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.krazo</groupId>
-            <artifactId>krazo-jersey</artifactId>
-            <version>${krazo.version}</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
-        <finalName>jakarta-mvc</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <release>11</release>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
